[package]
name = "hold"
version = "0.3.3"
edition = "2024"
license = "MIT"
build = "build.rs"
repository = "https://github.com/BoltzExchange/hold"

[features]
default = ["otel"]
otel = [
    "dep:axum",
    "dep:tower-http",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:tracing-subscriber",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
    "dep:opentelemetry-semantic-conventions",
]

[profile.release]
strip = true
opt-level = 2
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0.102"
cln-plugin = "0.6.0"
diesel = { version = "2.3.8", features = [
    "postgres",
    "r2d2",
    "chrono",
    "sqlite",
] }
diesel_migrations = "2.3.2"
prost = "0.14.3"
rcgen = { version = "0.14.7", features = ["x509-parser"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "sync"] }
tonic = { version = "0.14.2", features = ["gzip", "zstd", "tls-aws-lc"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
lightning-invoice = { version = "0.34.0", features = ["std"] }
chrono = { version = "0.4.44", features = ["serde"] }
bitcoin = { version = "0.32.8", features = ["rand-std"] }
secp256k1 = "0.29.1"
cln-rpc = "0.6.0"
hex = "0.4.3"
tokio-util = "0.7.18"
lightning = { version = "0.2.2", features = ["std"] }
bech32 = "0.11.1"
tonic-prost = "0.14.5"
opentelemetry = { version = "0.31.0", optional = true }
opentelemetry-semantic-conventions = { version = "0.31.0", features = [
    "semconv_experimental",
], optional = true }
opentelemetry_sdk = { version = "0.31.0", features = [
    "rt-tokio",
], optional = true }
opentelemetry-otlp = { version = "0.31.1", features = [
    "grpc-tonic",
    "gzip-tonic",
], optional = true }
tracing-opentelemetry = { version = "0.32.1", optional = true }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23", optional = true, features = [
    "env-filter",
] }
axum = { version = "0.8.9", optional = true, default-features = false }
tower-http = { version = "0.6.8", features = ["trace"], optional = true }

[build-dependencies]
built = { version = "0.8.0", features = ["git2"] }
tonic-prost-build = "0.14.5"

[dev-dependencies]
mockall = "0.14.0"
